--- a/week2/task2 - function approximation.ipynb
+++ b/week2/task2 - function approximation.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -62,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 29,
    "metadata": {
     "scrolled": true
    },
@@ -115,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -128,8 +127,8 @@
     }
    ],
    "source": [
-    "[k1,b1] = scipy.linalg.solve(A,y)\n",
-    "print(b)\n",
+    "[k1,b1] = linalg.solve(A,y)\n",
+    "print(b1)\n",
     "\n",
     "def f0(x):\n",
     "    return k1*x+b1;\n",
@@ -139,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +231,7 @@
     "y1 = np.array([f(1), f(8), f(15)])\n",
     "print(y1)\n",
     "\n",
-    "[a1,b1,c1] = scipy.linalg.solve(A1,y1)\n",
+    "[a1,b1,c1] = linalg.solve(A1,y1)\n",
     "\n",
     "def f1(x):\n",
     "    return a1*(x**2)+b1*x+c1;\n"
@@ -240,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +315,7 @@
     "y2= np.array([f(1), f(4), f(1), f(15)])\n",
     "print(y2)\n",
     "\n",
-    "[a2,b2,c2,d2] = scipy.linalg.solve(A2,y2)\n",
+    "[a2,b2,c2,d2] = linalg.solve(A2,y2)\n",
     "\n",
     "def f2(x):\n",
     "    return a2*(x**3)+ b2*(x**2)+c2*x+d2;\n"
@@ -324,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
