--- a/week2-1/task1_peer_review_linreg_height_weight.ipynb
+++ b/week2-1/task1_peer_review_linreg_height_weight.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,16 +112,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f23603ae220>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f8f300d4580>"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -194,16 +194,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f23604d6940>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f8f2f847bb0>"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,16 +265,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x7f236037c400>"
+       "<seaborn.axisgrid.PairGrid at 0x7f8f2f7be6d0>"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,16 +328,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f236004ff40>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f8f2f7181c0>"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -367,16 +367,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f235bf322b0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f8f2f440b20>"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 15,
    "metadata": {
     "scrolled": false
    },
@@ -453,7 +453,7 @@
        "Text(0, 0.5, 'Weight')"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -500,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 16,
    "metadata": {
     "scrolled": false
    },
@@ -518,7 +518,7 @@
        "Text(0, 0.5, 'error')"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -595,7 +595,7 @@
        "Text(0, 0.5, 'Weight')"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -637,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -653,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -699,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -709,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -755,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -787,16 +787,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "343443.7584342449\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "Text(0, 0.5, 'Weight')"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -814,6 +821,11 @@
     }
    ],
    "source": [
+    "o1 = sqrt_err_w0_w1([50, 1.13515])\n",
+    "o2 = sqrt_err_w0_w1([w0_opt, w1_opt])\n",
+    "print(o1 - o2)\n",
+    "\n",
+    "\n",
     "pyplot.figure(figsize(10,10))\n",
     "pyplot.scatter(data['Height'], data['Weight'], color=\"blue\", alpha=0.1)\n",
     "\n",
