--- a/week2-3/task1_Preprocessing_LR_Coursera.ipynb
+++ b/week2-3/task1_Preprocessing_LR_Coursera.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,12 +77,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['Grant.Status', 'Sponsor.Code', 'Grant.Category.Code',\n",
+      "       'Contract.Value.Band...see.note.A', 'RFCD.Code.1', 'RFCD.Percentage.1',\n",
+      "       'RFCD.Code.2', 'RFCD.Percentage.2', 'RFCD.Code.3', 'RFCD.Percentage.3',\n",
+      "       'RFCD.Code.4', 'RFCD.Percentage.4', 'RFCD.Code.5', 'RFCD.Percentage.5',\n",
+      "       'SEO.Code.1', 'SEO.Percentage.1', 'SEO.Code.2', 'SEO.Percentage.2',\n",
+      "       'SEO.Code.3', 'SEO.Percentage.3', 'SEO.Code.4', 'SEO.Percentage.4',\n",
+      "       'SEO.Code.5', 'SEO.Percentage.5', 'Person.ID.1', 'Role.1',\n",
+      "       'Year.of.Birth.1', 'Country.of.Birth.1', 'Home.Language.1',\n",
+      "       'Dept.No..1', 'Faculty.No..1', 'With.PHD.1',\n",
+      "       'No..of.Years.in.Uni.at.Time.of.Grant.1',\n",
+      "       'Number.of.Successful.Grant.1', 'Number.of.Unsuccessful.Grant.1',\n",
+      "       'A..1', 'A.1', 'B.1', 'C.1'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
    "source": [
     "data = pd.read_csv('data.csv')\n",
-    "data.shape"
+    "data.shape\n",
+    "print(data.columns)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Описание данных\n",
+    "The university has provided the following features:  \n",
+    "**Sponsor Code**: an ID used to represent different sponsors  \n",
+    "**Grant Category Code**: categorization of the sponsor (e.g. Australian competitive grants, cooperative research centre, industry)  \n",
+    "**Contract Value Band**: the grant's value (see key below)  \n",
+    "**Start Date**: the date the grant application was submitted  \n",
+    "**RFCD Code**: research fields, courses and disciplines classification (see definitions)  \n",
+    "**RFCD Percentage**: if there are several RFCD codes that are relevant to a project  \n",
+    "**SEO Code**: socio economic objective classification (see definitions)  \n",
+    "**SEO Percentage**: if there are several SEO codes that are relevant to a project  \n",
+    "**Person ID**: the investigator's unique ID  \n",
+    "**Role**: the investigator's role in the study  \n",
+    "**Year of Birth**: the investigator's year of birth (rounded to the nearst five year interval)    \n",
+    "**Country of birth**: the investigator's country of birth (often aggregated to by-continent)  \n",
+    "**Home Language**: the investigator's native language (classified into English and Other)  \n",
+    "**Dept No**: the investigator's department  \n",
+    "**Faculty No**: the investigator's faculty  \n",
+    "**Grade Level**: the investigator's level of seniority  \n",
+    "**No. of years in Uni at time of grant**: the number of years the investigator had been at the University of Melbourne when the grant application was made  \n",
+    "**Number of Successful Grant**: the number of successful grant applications the investigator had made  \n",
+    "**Number of Unsuccessful Grant**: the number of unsuccessful grant applications the investigator had made  \n",
+    "**A***: number of A* journal articles  \n",
+    "**A**: number of A journal articles  \n",
+    "**B**: number of B journal articles  \n",
+    "**C**: number of C journal articles  "
    ]
   },
   {
@@ -95,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,9 +213,230 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Grant.Status</th>\n",
+       "      <th>Sponsor.Code</th>\n",
+       "      <th>Grant.Category.Code</th>\n",
+       "      <th>Contract.Value.Band...see.note.A</th>\n",
+       "      <th>RFCD.Code.1</th>\n",
+       "      <th>RFCD.Percentage.1</th>\n",
+       "      <th>RFCD.Code.2</th>\n",
+       "      <th>RFCD.Percentage.2</th>\n",
+       "      <th>RFCD.Code.3</th>\n",
+       "      <th>RFCD.Percentage.3</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Dept.No..1</th>\n",
+       "      <th>Faculty.No..1</th>\n",
+       "      <th>With.PHD.1</th>\n",
+       "      <th>No..of.Years.in.Uni.at.Time.of.Grant.1</th>\n",
+       "      <th>Number.of.Successful.Grant.1</th>\n",
+       "      <th>Number.of.Unsuccessful.Grant.1</th>\n",
+       "      <th>A..1</th>\n",
+       "      <th>A.1</th>\n",
+       "      <th>B.1</th>\n",
+       "      <th>C.1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>21A</td>\n",
+       "      <td>50A</td>\n",
+       "      <td>A</td>\n",
+       "      <td>230202.0</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>230203.0</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>230204.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3098.0</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>&gt;=0 to 5</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>4D</td>\n",
+       "      <td>10A</td>\n",
+       "      <td>D</td>\n",
+       "      <td>320801.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2553.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>&gt;=0 to 5</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>320602.0</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>321004.0</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>321015.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2813.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Less than 0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>51C</td>\n",
+       "      <td>20C</td>\n",
+       "      <td>A</td>\n",
+       "      <td>291503.0</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>321402.0</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2553.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>more than 15</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>24D</td>\n",
+       "      <td>30B</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>380107.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2923.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Less than 0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 39 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Grant.Status Sponsor.Code Grant.Category.Code  \\\n",
+       "0             1          21A                 50A   \n",
+       "1             1           4D                 10A   \n",
+       "2             0          NaN                 NaN   \n",
+       "3             0          51C                 20C   \n",
+       "4             0          24D                 30B   \n",
+       "\n",
+       "  Contract.Value.Band...see.note.A  RFCD.Code.1  RFCD.Percentage.1  \\\n",
+       "0                               A      230202.0               50.0   \n",
+       "1                               D      320801.0              100.0   \n",
+       "2                              NaN     320602.0               50.0   \n",
+       "3                               A      291503.0               60.0   \n",
+       "4                              NaN     380107.0              100.0   \n",
+       "\n",
+       "   RFCD.Code.2  RFCD.Percentage.2  RFCD.Code.3  RFCD.Percentage.3  ...  \\\n",
+       "0     230203.0               30.0     230204.0               20.0  ...   \n",
+       "1          0.0                0.0          0.0                0.0  ...   \n",
+       "2     321004.0               30.0     321015.0               20.0  ...   \n",
+       "3     321402.0               40.0          0.0                0.0  ...   \n",
+       "4          0.0                0.0          0.0                0.0  ...   \n",
+       "\n",
+       "   Dept.No..1  Faculty.No..1  With.PHD.1  \\\n",
+       "0      3098.0           31.0        Yes    \n",
+       "1      2553.0           25.0        Yes    \n",
+       "2      2813.0           25.0         NaN   \n",
+       "3      2553.0           25.0         NaN   \n",
+       "4      2923.0           25.0         NaN   \n",
+       "\n",
+       "   No..of.Years.in.Uni.at.Time.of.Grant.1  Number.of.Successful.Grant.1  \\\n",
+       "0                                >=0 to 5                           2.0   \n",
+       "1                                >=0 to 5                           3.0   \n",
+       "2                             Less than 0                           1.0   \n",
+       "3                            more than 15                           2.0   \n",
+       "4                             Less than 0                           0.0   \n",
+       "\n",
+       "   Number.of.Unsuccessful.Grant.1  A..1  A.1  B.1  C.1  \n",
+       "0                             0.0   0.0  4.0  2.0  0.0  \n",
+       "1                             1.0   0.0  2.0  0.0  0.0  \n",
+       "2                             5.0   0.0  7.0  2.0  0.0  \n",
+       "3                             1.0   5.0  6.0  9.0  1.0  \n",
+       "4                             2.0   0.0  0.0  0.0  0.0  \n",
+       "\n",
+       "[5 rows x 39 columns]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data.head()"
    ]
@@ -177,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,9 +471,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(213, 39)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data.dropna().shape"
    ]
@@ -237,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,9 +568,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Исходные данные:\n",
+      "\n",
+      "      sex nationality\n",
+      "0    male    American\n",
+      "1  female    European\n",
+      "2    male       Asian\n",
+      "3  female    European\n",
+      "\n",
+      "Закодированные данные:\n",
+      "\n",
+      "[[1. 0. 0. 0. 1.]\n",
+      " [0. 0. 1. 1. 0.]\n",
+      " [0. 1. 0. 0. 1.]\n",
+      " [0. 0. 1. 1. 0.]]\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.linear_model import LogisticRegression as LR\n",
     "from sklearn.feature_extraction import DictVectorizer as DV\n",
@@ -322,9 +627,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'X_cat' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-21-27e9e714ba03>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mencoder\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mDV\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msparse\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mX_cat_oh\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mencoder\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit_transform\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_cat\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mT\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_dict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'X_cat' is not defined"
+     ]
+    }
+   ],
    "source": [
     "encoder = DV(sparse = False)\n",
     "X_cat_oh = encoder.fit_transform(X_cat.T.to_dict().values())"
@@ -474,9 +791,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'pandas.tools'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-23-f2d60f63809d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mpandas\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtools\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplotting\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mscatter_matrix\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mdata_numeric\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train_real_zeros\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcolumns\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnumeric_cols\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mlist_cols\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m'Number.of.Successful.Grant.1'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'SEO.Percentage.2'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Year.of.Birth.1'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mscatter_matrix\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata_numeric\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mlist_cols\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0malpha\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.5\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfigsize\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'pandas.tools'"
+     ]
+    }
+   ],
    "source": [
     "from pandas.tools.plotting import scatter_matrix\n",
     "\n",
@@ -978,7 +1307,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
