--- a/week2-4/task1_bagging.ipynb
+++ b/week2-4/task1_bagging.ipynb
@@ -33,10 +33,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn import datasets, metrics, tree \n",
+    "#from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.model_selection import cross_validate\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "digits = datasets.load_digits()\n",
+    "X = digits['data']\n",
+    "y = digits['target']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'fit_time': array([0.0387404 , 0.02236867, 0.0203228 , 0.0186305 , 0.01959991,\n",
+      "       0.01899529, 0.0181818 , 0.01869345, 0.02151299, 0.01930642]), 'score_time': array([0.00080347, 0.00037909, 0.00038266, 0.00032353, 0.00035357,\n",
+      "       0.0003171 , 0.00043488, 0.00030613, 0.00038362, 0.00031781]), 'test_score': array([0.8       , 0.86111111, 0.85555556, 0.77777778, 0.78333333,\n",
+      "       0.9       , 0.87777778, 0.83240223, 0.83798883, 0.7877095 ])}\n"
+     ]
+    }
+   ],
+   "source": [
+    "classifier = tree.DecisionTreeClassifier()\n",
+    "param_grid ={}\n",
+    "cv = 10\n",
+    "\n",
+    "tree_cv = cross_validate(classifier, X, y, cv=cv)\n",
+    "print(tree_cv)\n",
+    "\n",
+    "#todo interpret"
+   ]
   },
   {
    "cell_type": "markdown",
