--- a/week2-4/task1_bagging.ipynb
+++ b/week2-4/task1_bagging.ipynb
@@ -33,18 +33,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn import datasets, metrics, tree \n",
     "#from sklearn.model_selection import GridSearchCV\n",
-    "from sklearn.model_selection import cross_validate\n"
+    "from sklearn.model_selection import cross_validate, cross_val_score\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,29 +55,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'fit_time': array([0.0387404 , 0.02236867, 0.0203228 , 0.0186305 , 0.01959991,\n",
-      "       0.01899529, 0.0181818 , 0.01869345, 0.02151299, 0.01930642]), 'score_time': array([0.00080347, 0.00037909, 0.00038266, 0.00032353, 0.00035357,\n",
-      "       0.0003171 , 0.00043488, 0.00030613, 0.00038362, 0.00031781]), 'test_score': array([0.8       , 0.86111111, 0.85555556, 0.77777778, 0.78333333,\n",
-      "       0.9       , 0.87777778, 0.83240223, 0.83798883, 0.7877095 ])}\n"
+      "0.8218901303538175\n"
      ]
     }
    ],
    "source": [
     "classifier = tree.DecisionTreeClassifier()\n",
-    "param_grid ={}\n",
     "cv = 10\n",
     "\n",
-    "tree_cv = cross_validate(classifier, X, y, cv=cv)\n",
-    "print(tree_cv)\n",
-    "\n",
-    "#todo interpret"
+    "score = cross_val_score(classifier, X, y, cv=cv)\n",
+    "print(score.mean())"
    ]
   },
   {
@@ -93,10 +87,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9209466170080696\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import BaggingClassifier\n",
+    "bagging = BaggingClassifier(base_estimator=classifier, n_estimators=100)\n",
+    "score = cross_val_score(bagging, X, y, cv=cv)\n",
+    "\n",
+    "print(score.mean())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -109,10 +117,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9198634388578524\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "subspace_size = int(math.sqrt(X.shape[1]))\n",
+    "bagging2 = BaggingClassifier(base_estimator=classifier, n_estimators=100, max_features = subspace_size)\n",
+    "score = cross_val_score(bagging2, X, y, cv=cv)\n",
+    "print(score.mean())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -125,10 +147,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.921489757914339\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "\n",
+    "subspace_size = int(math.sqrt(X.shape[1]))\n",
+    "\n",
+    "classifier_random = tree.DecisionTreeClassifier(max_features = subspace_size)\n",
+    "bagging3 = BaggingClassifier(base_estimator=classifier, n_estimators=100)\n",
+    "score = cross_val_score(bagging3, X, y, cv=cv)\n",
+    "print(score.mean())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -136,6 +175,29 @@
    "source": [
     "## Задание 5\n",
     "Полученный в пункте 4 классификатор - бэггинг на рандомизированных деревьях (в которых при построении каждой вершины выбирается случайное подмножество признаков и разбиение ищется только по ним). Это в точности соответствует алгоритму Random Forest, поэтому почему бы не сравнить качество работы классификатора с RandomForestClassifier из sklearn.ensemble. Сделайте это, а затем изучите, как качество классификации на данном датасете зависит от количества деревьев, количества признаков, выбираемых при построении каждой вершины дерева, а также ограничений на глубину дерева. Для наглядности лучше построить графики зависимости качества от значений параметров, но для сдачи задания это делать не обязательно"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9454655493482308\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier \n",
+    "rf_classifier = RandomForestClassifier(n_estimators = 100, max_features = subspace_size, random_state=1)\n",
+    "\n",
+    "score = cross_val_score(rf_classifier, X, y, cv=cv)\n",
+    "print(score.mean())\n",
+    "\n",
+    "#TODO не совпадает с результатом предыдущих вычислений. Проверить"
    ]
   },
   {
