week 2-4 unimportant changes

--- a/week2-3/task1_Preprocessing_LR_Coursera.ipynb
+++ b/week2-3/task1_Preprocessing_LR_Coursera.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +433,7 @@
        "[5 rows x 39 columns]"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -481,7 +481,7 @@
        "(213, 39)"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -636,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -735,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -747,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -769,15 +769,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1.54 ms, sys: 19 µs, total: 1.56 ms\n",
-      "Wall time: 929 µs\n"
+      "CPU times: user 861 µs, sys: 0 ns, total: 861 µs\n",
+      "Wall time: 643 µs\n"
      ]
     }
    ],
@@ -805,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -826,15 +826,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 0 ns, sys: 1.11 ms, total: 1.11 ms\n",
-      "Wall time: 633 µs\n"
+      "CPU times: user 1.09 ms, sys: 65 µs, total: 1.15 ms\n",
+      "Wall time: 872 µs\n"
      ]
     }
    ],
@@ -859,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -887,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -914,7 +914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -944,7 +944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -981,7 +981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1005,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1055,7 +1055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1112,7 +1112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1139,7 +1139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1182,7 +1182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1193,15 +1193,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1.37 ms, sys: 17 µs, total: 1.38 ms\n",
-      "Wall time: 791 µs\n"
+      "CPU times: user 943 µs, sys: 59 µs, total: 1 ms\n",
+      "Wall time: 664 µs\n"
      ]
     }
    ],
@@ -1227,7 +1227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1248,7 +1248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1278,7 +1278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
