--- a/week2-4/sklearn.rf_vs_gb.ipynb
+++ b/week2-4/sklearn.rf_vs_gb.ipynb
@@ -324,12 +324,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Зависимость качества от количесвта деревьев"
+    "#### Зависимость качества от количества деревьев"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,15 +338,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 11 s, sys: 411 ms, total: 11.4 s\n",
-      "Wall time: 11.4 s\n"
+      "CPU times: user 11.1 s, sys: 380 ms, total: 11.5 s\n",
+      "Wall time: 11.5 s\n"
      ]
     }
    ],
@@ -363,16 +363,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fa8d2b54a30>"
+       "<matplotlib.legend.Legend at 0x7eff078ca6d0>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -407,15 +407,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 6min 23s, sys: 3.44 s, total: 6min 26s\n",
-      "Wall time: 49.8 s\n"
+      "CPU times: user 3min 53s, sys: 3.81 s, total: 3min 57s\n",
+      "Wall time: 36 s\n"
      ]
     }
    ],
@@ -467,7 +467,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fa8cffe7820>"
+       "<matplotlib.legend.Legend at 0x7eff055df8b0>"
       ]
      },
      "execution_count": 14,
@@ -506,6 +506,13 @@
     "\n",
     "установка: http://xgboost.readthedocs.io/en/latest/build.html"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
