week 3-1 task 1 process

--- a/week3-1/task1-banner-placement.ipynb
+++ b/week3-1/task1-banner-placement.ipynb
@@ -32,10 +32,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import os, urllib\n",
+    "from io import BytesIO\n",
+    "from zipfile import ZipFile\n",
+    "from pathlib import Path\n",
+    "\n",
+    "path_to_zip = '../datafiles/fsq.zip'\n",
+    "\n",
+    "if not (Path(path_to_zip)).exists():\n",
+    "    urllib.request.urlretrieve(\"https://archive.org/download/201309_foursquare_dataset_umn/fsq.zip\", path_to_zip)\n",
+    "\n",
+    "with ZipFile(path_to_zip, \"r\") as zip_ref:\n",
+    "    zip_ref.extractall(\"../datafiles/fsq/\")\n",
+    "    \n",
+    "path_to_checkins = '../datafiles/fsq/umn_foursquare_datasets/checkins.dat'"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -46,10 +61,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   id    | user_id | venue_id |     latitude      |     longitude     |     created_at      \n",
+      "\n",
+      "---------+---------+----------+-------------------+-------------------+---------------------\n",
+      "\n",
+      "  984301 | 2041916 |     5222 |                   |                   | 2012-04-21 17:39:01\n",
+      "\n",
+      "  984222 |   15824 |     5222 |        38.8951118 |       -77.0363658 | 2012-04-21 17:43:47\n",
+      "\n",
+      "  984315 | 1764391 |     5222 |                   |                   | 2012-04-21 17:37:18\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "dat_file = open(path_to_checkins, 'r')\n",
+    "for i in range(5):\n",
+    "    print(dat_file.readline())\n",
+    "dat_file.close()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -61,10 +98,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "path_to_csv = '../datafiles/checkins.csv'\n",
+    "\n",
+    "if not (Path(path_to_csv)).exists():\n",
+    "    csv_file = open(csv_file_path, \"w\")\n",
+    "    \n",
+    "    dat_file = open(path_to_checkins, 'r')\n",
+    "    dat_file.readline() # пропускаем шапку\n",
+    "    dat_file.readline()\n",
+    "    for line in dat_file:\n",
+    "        line = line.split(\"|\")\n",
+    "        line = [w.strip() for w in line]\n",
+    "        if (len(line) > 4 and line[3] != '' and line[4] != ''):        \n",
+    "            csv_file.write(line[3]+ \"|\" + line[4] + \"\\n\")\n",
+    "\n",
+    "    csv_file.close()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -76,16 +129,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['latitude', 'longitude'], dtype='object')\n",
+      "latitude     float32\n",
+      "longitude    float32\n",
+      "dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "#df = pd.read_csv(path_to_csv, \n",
+    "#                 sep='|',\n",
+    "#                 names=['id','user_id','venue_id','latitude','longitude','created_at'],\n",
+    "#                 dtype={'id': np.int32, 'user_id': np.int32, 'venue_id': np.int32,\n",
+    "#                       'latitude': np.float32,'longitude' : np.float32}\n",
+    "#                )\n",
+    "#df.created_at = df.created_at.apply(pd.to_datetime)\n",
+    "\n",
+    "df = pd.read_csv(path_to_csv, sep='|', names=['latitude','longitude'], dtype={'latitude': np.float32,'longitude' : np.float32})\n",
+    "print(df.columns)\n",
+    "print(df.dtypes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        latitude   longitude\n",
+      "0      38.895111  -77.036369\n",
+      "1      33.800743  -84.410522\n",
+      "2      45.523453 -122.676208\n",
+      "3      40.764462 -111.904564\n",
+      "4      33.448376 -112.074036\n",
+      "...          ...         ...\n",
+      "99995  33.575001 -117.725555\n",
+      "99996  37.629349 -122.400085\n",
+      "99997  29.762884  -95.383064\n",
+      "99998  32.802956  -96.769920\n",
+      "99999  37.774929 -122.419418\n",
+      "\n",
+      "[100000 rows x 2 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.head(100000))"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Теперь необходимо кластеризовать данные координаты, чтобы выявить центры скоплений туристов. Поскольку баннеры имеют сравнительно небольшую площадь действия, нам нужен алгоритм, позволяющий ограничить размер кластера и не зависящий от количества кластеров."
+    "_________________________________"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Теперь необходимо **кластеризовать данные координаты, чтобы выявить центры скоплений туристов**. Поскольку баннеры имеют сравнительно небольшую площадь действия, нам нужен алгоритм, позволяющий ограничить размер кластера и не зависящий от количества кластеров."
    ]
   },
   {
@@ -109,6 +225,57 @@
    "source": [
     "Некоторые из получившихся кластеров содержат слишком мало точек — такие кластеры не интересны рекламодателям. Поэтому надо определить, какие из кластеров содержат, скажем, больше 15 элементов. Центры этих кластеров и являются оптимальными для размещения.\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 2min 19s, sys: 0 ns, total: 2min 19s\n",
+      "Wall time: 2min 19s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "from sklearn.cluster import MeanShift, estimate_bandwidth\n",
+    "from sklearn.datasets import make_blobs\n",
+    "\n",
+    "clustering = MeanShift(bandwidth=0.1).fit(df.head(100000))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[  40.719643  -73.994316]\n",
+      " [  33.452442 -112.00194 ]\n",
+      " [  33.385387 -111.86146 ]\n",
+      " ...\n",
+      " [ -37.822983  145.18118 ]\n",
+      " [ -41.292496  174.77324 ]\n",
+      " [ -45.031162  168.66264 ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "labels = clustering.labels_\n",
+    "cluster_centers = clustering.cluster_centers_\n",
+    "\n",
+    "labels_unique = np.unique(labels)\n",
+    "n_clusters_ = len(labels_unique)\n",
+    "\n",
+    "print(clustering.cluster_centers_)"
    ]
   },
   {
@@ -144,6 +311,13 @@
     "\n",
     "-33.868457, 151.205134 (Sydney)\n",
     "</pre>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "_______________________"
    ]
   },
   {
